[package]
name = "free_funny_cat_photos_downloader"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
futures = "0.3.28"
inquire = "0.6.2"
log = "0.4.19"
rand = "0.8.5"
reqwest = "0.11.18"
scraper = "0.17.1"
simplelog = "0.12.1"
spinners = "4.1.0"
strum = "0.24.1"
tokio = { version = "1.28.2", features = ["full"] }
